# bilayer_surface

./: .gitignore  CMakeLists.txt  ConstitutiveModel.h  GeometryUtils.cpp  GeometryUtils.h  eigenIncludes.h  elasticBendingForce.cpp  elasticBendingForce.h  elasticPlate.cpp  elasticPlate.h  elasticStretchingForce.cpp  elasticStretchingForce.h  main.cpp  option.txt  timeStepper.cpp  timeStepper.h  world.cpp  world.h
datafiles/: simDiscretePlate.txt
inputdata/: nodesInput.txt  triangleInput.txt
